# image_projection

./: .gitignore  LICENSE  README.md  image_projection_https.rosinstall
image_projection/: CMakeLists.txt  nodelet_plugins.xml  package.xml
image_projection/cfg/: Projection.cfg
image_projection/config/: cameras.yaml
image_projection/include/image_projection/: image_projection.h  image_projection_server.h  periodic_image_projection.h
image_projection/include/image_projection/utils/: timing.h  utils.h
image_projection/scripts/: kalibr_yaml_to_urdf.py
image_projection/src/: image_projection.cpp  image_projection_server.cpp  image_projection_server_node.cpp  periodic_image_projection.cpp  periodic_image_projection_node.cpp  periodic_image_projection_nodelet.cpp
image_projection_demo/: CMakeLists.txt  package.xml
image_projection_demo/config/: camera360_cameras.yaml  projections.yaml
image_projection_demo/config/insta360_3_omni_radtan_calibration/: camera360_left.yaml  camera360_right.yaml  cameras.yaml
image_projection_demo/launch/: calibration_publisher.launch  demo_insta360.launch  projections.launch  rosbag.launch  rqt.launch  split_image.launch  tf.launch
image_projection_demo/rqt/: default.perspective
image_projection_demo/urdf/: insta360.urdf.xacro
image_projection_msgs/: CMakeLists.txt  package.xml
image_projection_msgs/srv/: ProjectPixelTo3DRay.srv
image_projection_plugin_interface/: CMakeLists.txt  package.xml
image_projection_plugin_interface/include/image_projection_plugin_interface/: projection_base.h  utils.h
image_projection_plugin_interface/src/: projection_base.cpp
image_projection_plugins/: CMakeLists.txt  package.xml  plugins.xml
image_projection_plugins/include/image_projection_plugins/: ideal_fisheye_projection.h  pinhole_projection.h
image_projection_plugins/include/image_projection_plugins/cylindrical/: equirectangular_projection.h  mercator_projection.h
image_projection_plugins/src/: ideal_fisheye_projection.cpp  pinhole_projection.cpp
image_projection_plugins/src/cylindrical/: equirectangular_projection.cpp  mercator_projection.cpp
