<?xml version="1.0"?>
<package format="2">
  <name>image_projection_demo</name>
  <version>0.0.0</version>
  <description>Demo project for image_projection</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/image_projection</url> -->
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_projection</exec_depend>
  <exec_depend>image_projection_plugins</exec_depend>
  <exec_depend>kalibr_extended_camera_info_publisher</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
