<?xml version="1.0"?>
<package format="2">
  <name>image_projection_plugin_interface</name>
  <version>0.0.0</version>
  <description>Base class for projection plugins</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/image_projection</url> -->
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>ddynamic_reconfigure</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
