<?xml version="1.0"?>
<package format="2">
  <name>image_projection_plugins</name>
  <version>0.0.0</version>
  <description>Collection of projection plugins</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/image_projection_plugins</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>image_projection_plugin_interface</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <image_projection_plugin_interface plugin="${prefix}/plugins.xml" />
  </export>
</package>
